2003-12-15  JP Rosevear <jpr@ximian.com>

	* bonobo/bonobo-ui-sync-toolbar.c (toolbar_build_widget): do a
	memmove instead of a strcpy because the strings overlap

2003-12-11  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-toolbar.c
	(size_allocate_helper): fix bug where item + <small item>
	where small item was < sizeof expander popup would cause
	the last 2 items to always hit the expander. Cleaned up
	logic, simplified a tad. X#49949

2003-12-08  Michael Meeks  <michael@ximian.com>

	* Version 2.5.1

	* bonobo/bonobo-control.c (bonobo_control_do_popup_full),
	(bonobo_control_do_popup_path): split out / add a more
	useful API variant.

2003-12-05  Jan Arne Petersen  <jpetersen@uni-bonn.de>

	* bonobo/bonobo-file-selector-util.c: (response_cb),
	(create_gtk_selector): Replace GtkFileSelection with
	GtkFileChooser.

	* samples/compound-doc/container/container-filesel.c:
	(container_request_file):
	* samples/compound-doc/container/container-filesel.h:
	* samples/compound-doc/container/container-menu.c:
	(load_response_cb), (save_response_cb), (verb_FileSaveAs_cb),
	(verb_FileLoad_cb): ditto.

2003-12-06  Michael Meeks  <michael@ximian.com>

	* tests/test-ui.c (main): add keys test.

	* bonobo/bonobo-ui-engine.c
	(impl_emit_verb_on, impl_emit_event_on): inhibit
	event / verb emission on insensitive command nodes,
	fixes keybindings problem; thanks to Chris Toshok.
	
	* bonobo/bonobo-control.c (create_plug):
	emit 'plug_created' signal.
	(bonobo_control_get_plug): expose and document.

2003-10-29  Michael Meeks  <michael@ximian.com>

	* Makefile.am (DISTCLEANFILES): add .

2003-10-29  Michael Meeks  <michael@ximian.com>

	* Version 2.4.1

2003-10-29  Steve Chaplin  <stevech1097@yahoo.com.au>

	* configure.in: add setup for PKG_CONFIG,
	fixing configure bug.

2003-10-08  Mark McLoughlin  <mark@skynet.ie>

	* COPYING.LIB: added LGPL. COPYING is GPL.

2003-10-06  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "mr" to ALL_LINGUAS.
